virtualized secret list + fix scrollbar of death

--- a/src/stylesheets/components/Layout.sass
+++ b/src/stylesheets/components/Layout.sass
@@ -1,7 +1,7 @@
 
 .layout
   min-width: 300px
-  max-height: 100%
+  max-height: calc(100% - 20px)
   flex: 1 1 100%
   display: flex
   flex-direction: row
@@ -12,6 +12,11 @@
   align-items: stretch
 
 .secretin-version
+  display: block
   text-align: right
   font-size: 12px
   opacity: .3
+
+.footer
+  flex: 1
+  flex-direction: column
